# correlations-after-coffee

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
my_app/: package-lock.json  package.json
my_app/blog/: settings.py  urls.py
my_app/correlations/: apps.py  models.py  urls.py  views.py
my_app/correlations/migrations/: 0001_initial.py
my_app/correlations/static/correlations/: out.css  output.css  style.css
my_app/correlations/templates/correlations/: detail.html  index.html  index2.html
